@@ -1,15 +1,14 @@
 package com.yas.webhook.controller;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
 import com.yas.webhook.model.viewmodel.webhook.EventVm;
 import com.yas.webhook.service.EventService;
-import java.util.Collections;
 import java.util.List;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
@@ -18,24 +17,20 @@ import org.springframework.http.ResponseEntity;
 @ExtendWith(MockitoExtension.class)
 class EventControllerTest {
 
-    private EventController eventController;
-
     @Mock
-    private EventService eventService;
+    EventService eventService;
 
-    @BeforeEach
-    void setUp() {
-        eventController = new EventController(eventService);
-    }
+    @InjectMocks
+    EventController eventController;
 
     @Test
-    void listEvents_shouldReturnOk() {
-        List<EventVm> expected = Collections.emptyList();
-        when(eventService.findAllEvents()).thenReturn(expected);
-        
+    void listWebhooksShouldReturnAllEvents() {
+        List<EventVm> events = List.of(EventVm.builder().id(1L).build());
+        when(eventService.findAllEvents()).thenReturn(events);
+
         ResponseEntity<List<EventVm>> response = eventController.listWebhooks();
-        
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(expected, response.getBody());
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isSameAs(events);
     }
 }
